# hammerhead

./: .bestref  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  hexo.toml  rust-toolchain.toml
.cargo/: config.toml
benches/fixtures/: positions.json
benches/results/: HOTSPOTS.md  METHODOLOGY.md  PHASE14_NOTES.md  baseline.json
docs/: sdk.md
docs/specs/: SPEC_OPENING_BOOK.md
docs/superpowers/plans/: 2026-05-19-book-tiers.md  2026-05-19-opening-book.md  2026-05-19-turn-state-refactor.md
hammerhead/: pyproject.toml
hammerhead-engine/: Cargo.toml  build.rs  pyproject.toml
hammerhead-engine/benches/: bench_axis_bitmap.rs  bench_board.rs  bench_eval.rs  bench_moves.rs  bench_ordering.rs  bench_search.rs  bench_threats.rs  bench_tt.rs  iai_search.rs
hammerhead-engine/benches/common/: positions.rs
hammerhead-engine/examples/: bench_drain.rs  mem_layout.rs
hammerhead-engine/nets/: README.md  peraxis_aug.json
hammerhead-engine/src/: axis_bitmap.rs  board.rs  coords.rs  engine.rs  eval.rs  eval_overrides.rs  lib.rs  line_contrib.rs  moves.rs  nnue.rs  ordering.rs  proximity.rs  pybind.rs  search.rs  search_stats.rs  threats.rs  tt.rs
hammerhead-engine/tests/: axis_bitmap_tests.rs  bench_fixtures_smoke.rs  board_tests.rs  chimera_positions.rs  coord_tests.rs  eval_overrides_tests.rs  eval_tests.rs  moves_tests.rs  nnue_tests.rs  ordering_tests.rs  search_params_tests.rs  search_tests.rs  threats_oracle.rs  threats_tests.rs  tt_tests.rs  win_tests.rs  zobrist_tests.rs
hammerhead/hammerhead/: __init__.py  benchmark.py  bot.py  cli.py  cli_bench.py  cli_match.py  config.py  exceptions.py  game.py  openings.py  promote.py  promote_sprt.py  promote_worktree.py  tune.py  tune_bo.py  tune_bo_report.py  types.py
hammerhead/tests/: test_benchmark.py  test_bot.py  test_bot_stats.py  test_cli_bot.py  test_engine.py  test_eval_overrides.py  test_nnue.py  test_openings.py  test_promote.py  test_public_api.py  test_search_params.py  test_smoke.py  test_tune.py
hexo/: pyproject.toml
hexo-engine/: Cargo.toml  build.rs  pyproject.toml
hexo-engine/benches/: bench_axis_bitmap.rs  bench_board.rs  bench_eval.rs  bench_moves.rs  bench_ordering.rs  bench_search.rs  bench_threats.rs  bench_tt.rs
hexo-engine/benches/common/: mod.rs  positions.rs
hexo-engine/examples/: bench_drain.rs
hexo-engine/src/: axis_bitmap.rs  board.rs  config.rs  coords.rs  eval.rs  lib.rs  moves.rs  ordering.rs  proximity.rs  pybind.rs  search.rs  threats.rs  tt.rs  win.rs  zobrist.rs
hexo-engine/tests/: axis_bitmap_tests.rs  bench_fixtures_smoke.rs  board_tests.rs  coord_tests.rs  eval_tests.rs  moves_tests.rs  ordering_tests.rs  search_tests.rs  threat_tests.rs  threats_oracle.rs  threats_tests.rs  tt_tests.rs  win_tests.rs  zobrist_tests.rs
hexo/hexo/: __init__.py  benchmark.py  bot.py  cli.py  config.py  notation.py  promote.py
hexo/tests/: test_benchmark.py  test_bot.py  test_cli_bot.py  test_engine.py  test_promote.py  test_smoke.py
scripts/: flamegraph.sh  pgo_build.sh  pgo_training.py  setup_worktree.sh  tune_lmr.py
specs/: SPEC_API.md  SPEC_ARCHITECTURE.md  SPEC_BENCHMARKS.md  SPEC_CONFIG.md  SPEC_ENGINE.md  SPEC_EVAL.md  SPEC_ROADMAP.md
subagents/reports/: phase24-perf-investigation.md
subagents/scans/: phase13-piece-at-callsites.md  phase14-allocations.md  phase15-threats-cache-callers.md  phase16-proximity-callsites.md  phase17-s1s2-investigation.md  phase17-vs-harness-structure.md
tools/: cap_h2h.py  cap_nps.py  cap_survival.py  cma_h2h.py  cma_tune.py  cma_validate.py  eval_compare.py  eval_compare_analyze.py  qsearch_tt_ab.sh
