[package]
name = "hammerhead_engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
# Distinct cargo target name from the PyO3 module name (`hammerhead_engine`).
# Avoids output-filename collision when both `cdylib` and `rlib` are
# emitted: cargo emits `libhammerhead_engine_core.{so,rlib}`, and maturin
# renames the cdylib to `hammerhead_engine.so` per `pyproject.toml
# [tool.maturin] module-name`. The PyO3 `#[pymodule] fn hammerhead_engine`
# in `src/pybind.rs` is independent of this name.
name = "hammerhead_engine_core"
crate-type = ["cdylib", "rlib"]

[features]
# `simd_eval` ships in `default`, byte-identity certified against the
# scalar encode (Phase 17: `eval::tests::simd_8cell_matches_scalar_all_6561`
# matches across every legal 8-cell window) plus the reference
# node-count regression net. The dispatcher does runtime AVX2
# detection and falls back to scalar transparently when the host
# lacks AVX2, so non-x86 / older-x86 targets are unaffected.
#
# `tt_stats` and `mimalloc` stay opt-in: stats are a dev affordance
# (zero-cost when off), and mimalloc was within noise on this host
# (Phase 14 STEP 3.2). See specs/SPEC_BENCHMARKS.md.
default   = ["simd_eval"]
tt_stats  = []
mimalloc  = ["dep:mimalloc"]
simd_eval = []

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"] }
fxhash = "0.2"
smallvec = "1"
rand = "0.9"
rand_xoshiro = "0.8"
thiserror = "2"
toml = { version = "0.9", default-features = false, features = ["parse", "serde"] }
mimalloc = { version = "0.1", default-features = false, optional = true }

[build-dependencies]
toml = { version = "0.9", default-features = false, features = ["parse", "serde"] }

# bench_drain is an `[[example]]` (not `[[bin]]`) so it can use these
# dev-deps without bloating the production cdylib.
[dev-dependencies]
criterion   = { version = "0.7", features = ["html_reports"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
chrono      = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
incremental   = false
debug         = false

# Inherit release optimizations for cargo bench, but keep debug symbols
# so `make flamegraph` produces a meaningful SVG with named frames.
# `strip = "none"` reverses the release-profile symbol strip we added in
# Phase 14 STEP 0 — without it the flamegraph collapses to nameless
# `[unknown]` frames.
[profile.bench]
inherits             = "release"
debug                = true
strip                = "none"
lto                  = "fat"
codegen-units        = 1
# Frame pointers required for `perf --call-graph fp` flamegraph capture.
# LTO + `target-cpu=native` would otherwise omit them on leaf functions,
# collapsing the search recursion into `[unknown]`. ~0-1% NPS on the bench
# profile only; the production cdylib profile is separate and untouched.
# See specs/SPEC_BENCHMARKS.md § Flamegraph capture — frame-pointer based.
force-frame-pointers = "yes"

[[bench]]
name = "bench_board"
harness = false

[[bench]]
name = "bench_axis_bitmap"
harness = false

[[bench]]
name = "bench_moves"
harness = false

[[bench]]
name = "bench_threats"
harness = false

[[bench]]
name = "bench_eval"
harness = false

[[bench]]
name = "bench_ordering"
harness = false

[[bench]]
name = "bench_tt"
harness = false

[[bench]]
name = "bench_search"
harness = false

[[example]]
name = "bench_drain"
path = "examples/bench_drain.rs"
