[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hammerhead"
version = "0.1.0"
description = "Hammerhead — HeXO minimax bot, Python wrapper"
requires-python = ">=3.10"
dependencies = [
  "hammerhead_engine",
]

[project.scripts]
hammerhead = "hammerhead.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hammerhead*"]
