[package]
name = "hexo_engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "hexo_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"] }
fxhash = "0.2"
smallvec = "1"
rand = "0.9"
rand_xoshiro = "0.8"
thiserror = "2"
toml = { version = "0.9", default-features = false, features = ["parse", "serde"] }

[build-dependencies]
toml = { version = "0.9", default-features = false, features = ["parse", "serde"] }

# bench_drain is an `[[example]]` (not `[[bin]]`) so it can use these
# dev-deps without bloating the production cdylib.
[dev-dependencies]
criterion   = { version = "0.7", features = ["html_reports"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
chrono      = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[[bench]]
name = "bench_board"
harness = false

[[bench]]
name = "bench_axis_bitmap"
harness = false

[[bench]]
name = "bench_moves"
harness = false

[[bench]]
name = "bench_threats"
harness = false

[[bench]]
name = "bench_eval"
harness = false

[[bench]]
name = "bench_ordering"
harness = false

[[bench]]
name = "bench_tt"
harness = false

[[bench]]
name = "bench_search"
harness = false

[[example]]
name = "bench_drain"
path = "examples/bench_drain.rs"
